--- a/.travis.yml
+++ b/.travis.yml
@@ -90,7 +90,7 @@ script:
   # see: https://github.com/travis-ci/travis-ci/issues/4190 or https://github.com/HaxeFoundation/hxcpp/issues/709
   - while sleep 9m; do echo "=====[ $SECONDS seconds still running ]====="; done &
   #      ./mvnw -e ${MAVEN_GLOBAL_SETTINGS} -s settings.xml -Dgpg.executable=gpg -Dgpg.loopback=true -Dnexus2.staging=true clean deploy;
-  - time ./mvnw -e ${MAVEN_GLOBAL_SETTINGS} -s settings.xml -Dgpg.executable=gpg2 -Dgpg.loopback=true -Dnexus2.staging=true clean deploy;
+  - time ./mvnw -e ${MAVEN_GLOBAL_SETTINGS} -s settings.xml -Dgpg.executable=gpg2 -Dgpg.loopback=true -Dnexus2.staging=true -Dssh-tests -Dtest.rsyncdPort=8873 -Dtest.sshPort=8022 -Dtest.user=root -Duser.name=root clean deploy;
     if type -p column > /dev/null; then find .mvn/profiler-report -name "*.json" | xargs cat | jq -r '.projects[]|"module:", .project, "plugins", (.mojos[]|[.mojo,.time]|@tsv)' | column -t; fi; rm -rf .mvn/profiler-report;
     time ./mvnw -e ${MAVEN_GLOBAL_SETTINGS} -ntp -s settings.xml -Dcustom.nexus3=https://nexus3.infra.top/nexus/ -Dfast=true -Dinfrastructure=custom -Dmaven.clean.skip=true -Dmaven.install.skip=true -Dmaven.packages.skip=true -Dnexus2.staging=false deploy;
     if type -p column > /dev/null; then find .mvn/profiler-report -name "*.json" | xargs cat | jq -r '.projects[]|"module:", .project, "plugins", (.mojos[]|[.mojo,.time]|@tsv)' | column -t; fi; rm -rf .mvn/profiler-report;
